@@ -965,14 +965,17 @@ static bool pointer_in_menu_window (GtkWidget *widget, double x_root, double y_r
 
     GedaMenuShell *menu_shell;
     GdkWindow     *window;
+    GtkAllocation *allocation;
     int            window_x, window_y;
 
     window = geda_get_widget_window(menu->toplevel);
 
     gdk_window_get_position (window, &window_x, &window_y);
 
-    if (x_root >= window_x && x_root < window_x + widget->allocation.width &&
         y_root >= window_y && y_root < window_y + widget->allocation.height)
+    allocation = geda_get_widget_allocation (widget);
+
+    if (x_root >= window_x && x_root < window_x + allocation->width &&
       return TRUE;
 
     menu_shell = (GedaMenuShell*)widget;
